添加界面第三方库

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,13 @@ set(CMAKE_EXPERIMENTAL_CXX_MODULES ON)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)   
 
 set(BUILD_SHARED_LIBS ON)  
+
+find_package(OpenGL REQUIRED)  
 # 添加包含目录  
 include_directories(include)
 
 set(CMAKE_VERBOSE_MAKEFILE ON) 
-
+add_subdirectory(third_party/glfw)
 # 使用 FetchContent 下载 fmt 库  
 include(FetchContent)  
 
@@ -26,7 +28,6 @@ FetchContent_Declare(
 # 下载并构建 fmt 库  
 FetchContent_MakeAvailable(fmt)
 
-# 使用 FetchContent 下载 fmt 库  
 include(FetchContent)  
 
 FetchContent_Declare(  
@@ -37,25 +38,41 @@ FetchContent_Declare(
 # 下载并构建 fmt 库  
 FetchContent_MakeAvailable(xlnt)
 
+include(FetchContent)  
+
+set(IMGUI_DIR ${CMAKE_SOURCE_DIR}/third_party/imgui)  
+file(GLOB IMGUI_SOURCES  
+    ${IMGUI_DIR}/*.cpp  
+    ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp  
+    ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp  
+)  
+
 # 添加模块库  
 add_library(statistics SHARED)  # 创建模块库  
 target_sources(statistics  
     PRIVATE  
-        src/statistics/statistics.cpp  
+        src/statistics/statistics.cpp  ${IMGUI_SOURCES}
     PUBLIC  
         FILE_SET cxx_modules TYPE CXX_MODULES FILES src/statistics/statistics.ixx  
 ) 
-
-target_link_libraries(statistics PRIVATE fmt xlnt)  
+target_include_directories(statistics PRIVATE ${IMGUI_DIR} ${IMGUI_DIR}/backends)  
+target_include_directories(statistics PRIVATE ${GLFW_INCLUDE_DIRS})
+target_link_libraries(statistics PRIVATE fmt xlnt glfw ${OPENGL_LIBRARIES})  
 
 # 添加可执行文件  
 add_executable(app src/app/main.cpp)  
-target_link_libraries(app PRIVATE statistics fmt xlnt)  # 链接模块库
+target_link_libraries(app PRIVATE statistics fmt xlnt glfw ${OPENGL_LIBRARIES})  # 链接模块库
 
 target_include_directories(statistics PUBLIC src/statistics) 
 target_include_directories(app PUBLIC src/statistics) 
+target_include_directories(app PRIVATE ${IMGUI_DIR} ${IMGUI_DIR}/backends)  
+target_include_directories(app PRIVATE ${GLFW_INCLUDE_DIRS})
+
 
 add_custom_command(TARGET app POST_BUILD  
     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:fmt::fmt> $<TARGET_FILE_DIR:app>) 
 add_custom_command(TARGET app POST_BUILD  
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:xlnt> $<TARGET_FILE_DIR:app>)  
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:xlnt> $<TARGET_FILE_DIR:app>)
+add_custom_command(TARGET app POST_BUILD  
+    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:glfw> $<TARGET_FILE_DIR:app>)
+
